evaluator/sources/2111899520.error
/eval-folder/2111899520.cpp: In function 'int main()':
/eval-folder/2111899520.cpp:6:1: error: expected ';' before '}' token
 }
 ^
